<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ds"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enombre"
            android:textSize="15dp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNuevoEncuestador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nEncuestado" />

        <Button
            android:id="@+id/btnListaEncuestado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lEncuestado" />
    </LinearLayout>
</LinearLayout>