<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="?attr/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:text="@string/edad"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alimento"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblvAlimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
